[package]
name = "task-sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "6778089c", features=["json"] }
rocket = { version="0.5.0-rc.2", features=["json"] }
serde = {version="1.0.144",features=["derive"]}
rand = "0.8.5"
